--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     ["k","nude","mob.mp3"]
                 ],
                 hero_combination: heroes,
-                message: "Find the super hero!",
+                message: "Find the super hero and click on him to kill him!",
                 jingle: "super_underwear.mp3",
                 timer: 5
             },
@@ -306,7 +306,9 @@
                     ["k","nude","mob.mp3"]
                 ],
                 hero_combination: heroes,
-                timer: 25
+                timer: 25,
+                message: "You will lose points if you click on the wrong people."
+
             },
             {
                 chars: 200,
@@ -317,7 +319,9 @@
                     ["k","nude","mob.mp3"]
                 ],
                 hero_combination: heroes,
-                timer: 50
+                timer: 50,
+                message: "To get more point, found them quickly!"
+
             },
             {
                 chars: 300,
@@ -328,7 +332,9 @@
                     ["k","nude","mob.mp3"]
                 ],
                 hero_combination: heroes,
-                timer: 75
+                timer: 75,
+                message: "This music was engineered to be annoying."
+
             },
             {
                 chars: 400,
@@ -339,7 +345,9 @@
                     ["k","nude","mob.mp3"]
                 ],
                 hero_combination: heroes,
-                timer: 100
+                timer: 100,
+                message: "No unicorn was kill during the developpement of this game."
+
             },
             {
                 chars: 100,
@@ -377,7 +385,7 @@
                     ["k","nude","mob.mp3"]
                 ],
                 title: "Normal Underwear",
-                message: "<span style='color:red;'>Find the normal guy!</span>",
+                message: "<span style='color:red;'>Find the normal guys!</span>",
                 timer: 25
             },
             {
@@ -390,7 +398,7 @@
                     ["k","nude","mob.mp3"]
                 ],
                 title: "Normal Underwear",
-                message: "<span style='color:red;'>Find the normal guy!</span>",
+                message: "<span style='color:red;'>Find the normal guys!</span>",
                 timer: 50
             },
             {
@@ -403,7 +411,7 @@
                     ["k","nude","mob.mp3"]
                 ],
                 title: "Normal Underwear",
-                message: "<span style='color:red;'>Find the normal guy!</span>",
+                message: "<span style='color:red;'>Find the normal guys!</span>",
                 timer: 75
             },
             {
@@ -416,7 +424,7 @@
                     ["k","nude","mob.mp3"]
                 ],
                 title: "Normal Underwear",
-                message: "<span style='color:red;'>Find the normal guy!</span>",
+                message: "<span style='color:red;'>Find the normal guys!</span>",
                 timer: 100
             },
 
